--- a/Talleres/Taller_1_41.ipynb
+++ b/Talleres/Taller_1_41.ipynb
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -809,15 +809,43 @@
     },
     "nombre": "Ej4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Felipe', 'Gabriel', 'Susana']"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#import math\n",
+    "lista_temp = []\n",
+    "\n",
+    "for elemento in nombres:\n",
+    "    lista_temp.append(elemento)\n",
+    "#nom = nombres\n",
+    "nm=len(lista_temp)/2\n",
+    "num1=math.ceil(nm)\n",
+    "num2=math.floor(nm)+1\n",
+    "lista_temp.sort()\n",
+    "primera_mitad=lista_temp[0:num1]\n",
+    "segunda_mitad=lista_temp[num2:]\n",
+    "#nom\n",
+    "#lista_temp\n",
+    "#num2\n",
+    "#primera_mitad\n",
+    "segunda_mitad\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -833,7 +861,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
