--- a/Talleres/Taller_1_41.ipynb
+++ b/Talleres/Taller_1_41.ipynb
@@ -1007,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1068,15 +1068,29 @@
     },
     "nombre": "Ej5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c']"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "lista_abc= lista_abecedario[0:3]\n",
+    "lista_abc\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1092,7 +1106,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1167,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1182,15 +1204,28 @@
     },
     "nombre": "Ej6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['d', 'e']"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "lista_de=lista_abecedario[3][0:2]\n",
+    "lista_de\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1206,7 +1241,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1279,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 230,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1294,15 +1337,32 @@
     },
     "nombre": "Ej7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "lista_fgh=[]\n",
+    "lista_fgh=lista_abecedario[3][2]\n",
+    "#lista_fgh.append('h')\n",
+    "#del lista_fgh[2]\n",
+    "#len(lista_fgh)\n",
+    "#lista_fgh\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 231,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1318,7 +1378,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1393,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 232,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1408,15 +1476,29 @@
     },
     "nombre": "Ej8"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j']"
+      ]
+     },
+     "execution_count": 232,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "listaij=[\"i\",\"j\"]\n",
+    "lista_a_j=lista_abc+lista_de+lista_fgh+listaij\n",
+    "lista_a_j\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 233,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1432,7 +1514,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1525,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 236,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1571,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 237,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1595,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1610,15 +1700,29 @@
     },
     "nombre": "Ej9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#for a_buscar in tupla_primos\n",
+    "indice=tupla_primos.index(a_buscar)\n",
+    "indice\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 241,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1634,7 +1738,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1711,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 267,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1736,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1751,15 +1863,31 @@
     },
     "nombre": "Ej10"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 7, 13, 19, 29, 37, 43, 53)"
+      ]
+     },
+     "execution_count": 268,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "indice_inferior=tupla_primos.index(lim_inferior)\n",
+    "indice_superior=tupla_primos.index(lim_superior)+1\n",
+    "tupla_secuencia=tupla_primos[indice_inferior:indice_superior:2]\n",
+    "tupla_secuencia\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 269,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1775,7 +1903,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
