--- a/Talleres/Taller_1_41.ipynb
+++ b/Talleres/Taller_1_41.ipynb
@@ -2383,7 +2383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2437,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2466,10 +2466,11 @@
        " 'Septiembre': 30,\n",
        " 'Noviembre': 30,\n",
        " 'Junio': 30,\n",
-       " 'Diciembre': 31}"
+       " 'Diciembre': 31,\n",
+       " 'Octubre': 31}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2478,13 +2479,14 @@
     "# YOUR CODE HERE\n",
     "dicc_meses['Junio'] = 30\n",
     "dicc_meses['Diciembre'] = 31\n",
+    "dicc_meses['Octubre'] = 31\n",
     "dicc_meses\n",
     "#raise NotImplementedError()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2502,14 +2504,10 @@
    },
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "Tu diccionario no tiene el tamaño correcto.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-15-767377c88732>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;31m# Caso 6: el diccionario tiene el tamaño incorrecto\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdicc_meses\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"Tu diccionario no tiene el tamaño correcto.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;31m# Caso 7: el diccionario no contiene los valores/llaves correctos/as\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Tu diccionario no tiene el tamaño correcto."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
      ]
     }
    ],
