--- a/Talleres/Taller_1_41.ipynb
+++ b/Talleres/Taller_1_41.ipynb
@@ -2640,7 +2640,9 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "matriz=\n",
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
@@ -2767,7 +2769,8 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "#raise NotImplementedError()"
    ]
   },
   {
