--- a/Talleres/Taller_2_41.ipynb
+++ b/Talleres/Taller_2_41.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -225,12 +225,18 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "if num_1 > num_2:\n",
+    "    mayor = num_1\n",
+    "elif num_1 < num_2:\n",
+    "    mayor = num_2\n",
+    "elif num_1 == num_2:\n",
+    "    mayor = num_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -246,7 +252,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -391,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -436,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -454,12 +468,15 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "if elemento in lista:\n",
+    "    print(lista)\n",
+    "else:\n",
+    "    lista.append(elemento)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -475,7 +492,16 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['x', 'z', 'y', 'w']\n",
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -638,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -683,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -701,12 +727,15 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "if num % divisor == 0:\n",
+    "    division_o_residuo = num/divisor\n",
+    "else:\n",
+    "    division_o_residuo = num % divisor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -722,7 +751,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -835,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -882,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -897,15 +934,35 @@
     },
     "respuesta": "1"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Camilo'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "import operator\n",
+    "diccionario = {'vel_Camilo' : eval(\"vel_Camilo\"),\n",
+    "              'vel_Esteban' : eval(\"vel_Esteban\"),\n",
+    "              'vel_Alejandro' : eval(\"vel_Alejandro\"),\n",
+    "              'vel_David' : eval(\"vel_David\")}\n",
+    "\n",
+    "mas_rapido = max(diccionario.items(), key = operator.itemgetter(1))[0]\n",
+    "mas_rapido = mas_rapido.replace(\"vel_\",\"\")\n",
+    "\n",
+    "mas_rapido"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -921,7 +978,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1071,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1122,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1139,12 +1204,22 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "capacidad = (num_actual*100)/(cap_maxima)\n",
+    "ocupacion = None\n",
+    "info = []\n",
+    "if capacidad <= 40:\n",
+    "    info = [\"Bajo\", num_actual]\n",
+    "elif capacidad > 40 and capacidad <= 80:\n",
+    "    info = [\"Medio\", num_actual/cap_maxima]\n",
+    "elif capacidad > 80:\n",
+    "    info = [\"Alto\", cap_maxima-num_actual]\n",
+    "\n",
+    "ocupacion"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1160,7 +1235,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1336,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1385,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1399,15 +1482,50 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Semi vegetariana'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "ingredientes = []\n",
+    "tipo = \"\"\n",
+    "ingredientes.extend([ingrediente_1, ingrediente_2, ingrediente_3])\n",
+    "\n",
+    "if ingredientes[0] in vegetarianos:\n",
+    "    if ingredientes[1] in vegetarianos:\n",
+    "        if ingredientes[2] in vegetarianos:\n",
+    "            tipo = \"Vegetariana\"\n",
+    "        else:\n",
+    "            tipo = \"Semi vegetariana\"\n",
+    "    else:\n",
+    "        tipo = \"Semi vegetariana\"\n",
+    "        \n",
+    "else:\n",
+    "    tipo = \"Semi vegetariana\"\n",
+    "    if ingredientes[1] in no_vegetarianos:\n",
+    "        if ingredientes[2] in no_vegetarianos:\n",
+    "            tipo = \"No vegetariana\"\n",
+    "        else:\n",
+    "            tipo = \"Semi vegetariana\"\n",
+    "    else:\n",
+    "        tipo = \"Semi vegetariana\"\n",
+    "\n",
+    "tipo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1423,7 +1541,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1603,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1614,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1628,15 +1754,81 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 4,\n",
+       " 6,\n",
+       " 8,\n",
+       " 10,\n",
+       " 12,\n",
+       " 14,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 22,\n",
+       " 24,\n",
+       " 26,\n",
+       " 28,\n",
+       " 30,\n",
+       " 32,\n",
+       " 34,\n",
+       " 36,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 44,\n",
+       " 46,\n",
+       " 48,\n",
+       " 50,\n",
+       " 52,\n",
+       " 54,\n",
+       " 56,\n",
+       " 58,\n",
+       " 60,\n",
+       " 62,\n",
+       " 64,\n",
+       " 66,\n",
+       " 68,\n",
+       " 70,\n",
+       " 72,\n",
+       " 74,\n",
+       " 76,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 84,\n",
+       " 86,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 94,\n",
+       " 96,\n",
+       " 98,\n",
+       " 100]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "pares = []\n",
+    "\n",
+    "for x in range(0, n+1, 2):\n",
+    "    pares.append(x)\n",
+    "    \n",
+    "del pares[0]\n",
+    "pares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1652,7 +1844,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1735,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1779,7 +1979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1793,15 +1993,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "cuenta_regresiva = []\n",
+    "for i in range(inicio, 0, -1):\n",
+    "    cuenta_regresiva.append(i)\n",
+    "cuenta_regresiva"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1817,7 +2031,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -1930,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1975,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1992,12 +2214,15 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "if a_buscar in numeros:\n",
+    "    indice = numeros.index(a_buscar)\n",
+    "else:\n",
+    "    indice = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2013,7 +2238,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -2120,7 +2353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2166,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2183,12 +2416,12 @@
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "num_vocales = {'a' : cadena.count('a'), 'e' : cadena.count('e'), 'i' : cadena.count('i'), 'o' : cadena.count('o'), 'u' : cadena.count('u')}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2204,7 +2437,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -2302,7 +2543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2360,7 +2601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2374,15 +2615,34 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Bruno', 'Alex', 'Fiona', 'Copito', 'Maya']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#perros_refugio\n",
+    "\n",
+    "#perros_evento = lb in perros_refugio\n",
+    "#perros_evento\n",
+    "\n",
+    "valor = perros_refugio.values()\n",
+    "perros_evento = [k for k,v in perros_refugio.items() if v >= lb and v <= ub]\n",
+    "\n",
+    "perros_evento"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2398,7 +2658,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -2489,7 +2757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2537,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2551,15 +2819,41 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Atacaremos por el norte a las 5 de la tarde'"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "descifrada = \"\"\n",
+    "cadena = ''.join(alfabeto)\n",
+    "\n",
+    "for symbol in cifrada:\n",
+    "    if symbol in cadena:\n",
+    "        num = cadena.find(symbol)\n",
+    "        num = num + corr\n",
+    "        if num >= len(cadena):\n",
+    "            num = num - len(cadena)\n",
+    "        elif num < 0:\n",
+    "            num = num + len(cadena)\n",
+    "        descifrada = descifrada + cadena[num]\n",
+    "    else:\n",
+    "        descifrada = descifrada + symbol\n",
+    "        \n",
+    "descifrada\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2575,7 +2869,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -2656,7 +2958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2708,7 +3010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -2722,15 +3024,39 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Aretes'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "from operator import itemgetter\n",
+    "regalo = \"\"\n",
+    "valor = min(catalogo.values())\n",
+    "clave = [k for k,v in catalogo.items() if v == valor]\n",
+    "\n",
+    "if valor > 10000:\n",
+    "    regalo = \"Carta\"\n",
+    "else:\n",
+    "    regalo = clave\n",
+    "    regalo = sorted(regalo)\n",
+    "    del regalo[1]\n",
+    "    regalo = regalo[0]\n",
+    "\n",
+    "regalo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2746,7 +3072,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## PRUEBAS\n",
     "\n",
@@ -2884,7 +3218,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2898,7 +3232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
