--- a/Talleres/Taller_4_41.ipynb
+++ b/Talleres/Taller_4_41.ipynb
@@ -898,6 +898,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pos.\\tSelección\\tPts.\\tPJ\\tG\\tE\\tP\\tGF\\tGC\\tDif.\\n',\n",
+       " '1.\\tBrasil\\t41\\t18\\t12\\t5\\t1\\t41\\t11\\t30\\n',\n",
+       " '2.\\tUruguay\\t31\\t18\\t9\\t4\\t5\\t32\\t20\\t12\\n',\n",
+       " '3.\\tArgentina\\t28\\t18\\t7\\t7\\t4\\t19\\t16\\t3\\n',\n",
+       " '4.\\tColombia\\t27\\t18\\t7\\t6\\t5\\t21\\t19\\t2\\n',\n",
+       " '5.\\tPerú\\t26\\t18\\t7\\t5\\t6\\t27\\t26\\t1\\n',\n",
+       " '6.\\tChile\\t26\\t18\\t8\\t2\\t8\\t26\\t27\\t−1\\n',\n",
+       " '7.\\tParaguay\\t24\\t18\\t7\\t3\\t8\\t19\\t25\\t−6\\n',\n",
+       " '8.\\tEcuador\\t20\\t18\\t6\\t2\\t10\\t26\\t29\\t−3\\n',\n",
+       " '9.\\tBolivia\\t14\\t18\\t4\\t2\\t12\\t16\\t38\\t−22\\n',\n",
+       " '10.\\tVenezuela\\t12\\t18\\t2\\t6\\t10\\t19\\t35\\t−16\\n']"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "directorio=\"./Archivos/Eliminatorias.txt\"\n",
+    "lineas = archivo_a_lista(directorio)\n",
+    "x=0\n",
+    "EC_jorge=0\n",
+    "EC_juan=0\n",
+    "for i in lineas[1:]:\n",
+    "    country= i.split()[1]\n",
+    "    x=x+1\n",
+    "    posicion=x\n",
+    "    posicion_jorge=pronostico_jorge.index(country)+1\n",
+    "    posicion_juan=pronostico_juan.index(country)+1\n",
+    "    EC_jorge=(posicion-posicion_jorge)**2+EC_jorge\n",
+    "    EC_juan=(posicion-posicion_juan)**2+EC_juan\n",
+    "    \n",
+    "lineas    "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": false,
