--- a/Talleres/Taller_6_41.ipynb
+++ b/Talleres/Taller_6_41.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -152,13 +152,17 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def importar_e_indexar():\n",
+    "\n",
+    "    DataFrame=pd.read_stata( \"Archivos/pooled_data_public.dta\")\n",
+    "    DataFrame.set_index('id',inplace = True)\n",
+    "    \n",
+    "    return DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -174,7 +178,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -264,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -280,13 +292,16 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def indice_sencillo_a_multiple():\n",
+    "    df = importar_e_indexar()\n",
+    "    df.set_index(keys = \"country_code\", inplace = True,append = True, drop = True)\n",
+    "    \n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -302,7 +317,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -401,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 120,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -417,13 +440,16 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def sin_columnas():\n",
+    "    df1 = importar_e_indexar()\n",
+    "    df1.drop(['country_name', 'grado', 'coima'],axis = 'columns', inplace=True)\n",
+    "    \n",
+    "    return df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -439,7 +465,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -536,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -552,13 +586,16 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def indexar_columnas_numericamente():\n",
+    "    df = importar_e_indexar()\n",
+    "    df1=df.drop(columns = df.columns[80:101], inplace = False)\n",
+    "    \n",
+    "    return df1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -574,7 +611,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -661,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -677,13 +722,19 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def trabajo_afuera_y_mayores():\n",
+    "    df = importar_e_indexar()\n",
+    "    df1= df['trabajocasa'] == \"Fuera de su casa\"\n",
+    "    filtered_df = df[df1]\n",
+    "    df2= filtered_df['haymayores'] == \"si\"\n",
+    "    filtered_df1 = filtered_df[df2]\n",
+    "    \n",
+    "    return filtered_df1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -699,7 +750,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -788,7 +847,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sara\\AppData\\Local\\Temp/ipykernel_12492/1482003618.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df1[\"Results\"] = df1.apply(lambda x: 1 if x['nrhogar'] < x['nrhogar_antes'] else 0, axis=1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nrhogar</th>\n",
+       "      <th>nrhogar_antes</th>\n",
+       "      <th>Results</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1000060.0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000734.0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000057.0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000120.0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000235.0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17001614.0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17017448.0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>-99</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17013032.0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17014760.0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17003990.0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>230509 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            nrhogar  nrhogar_antes  Results\n",
+       "id                                         \n",
+       "1000060.0         5              5        0\n",
+       "1000734.0         6              6        0\n",
+       "1000057.0         5            -99        0\n",
+       "1000120.0         4              4        0\n",
+       "1000235.0         5              5        0\n",
+       "...             ...            ...      ...\n",
+       "17001614.0        2              2        0\n",
+       "17017448.0        6            -99        0\n",
+       "17013032.0        1              1        0\n",
+       "17014760.0        3              3        0\n",
+       "17003990.0        1              1        0\n",
+       "\n",
+       "[230509 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = importar_e_indexar()\n",
+    "df1 = df[['nrhogar', 'nrhogar_antes']]\n",
+    "#df1['hogar_decrecio'] = df1.iloc[:, 1:].eq(df1['nrhogar'] < df1['nrhogar_antes']).any(axis=1)\n",
+    "df1['hogar_decrecio'] = df1.apply(lambda x: 1 if x['nrhogar'] < x['nrhogar_antes'] else 0, axis=1)\n",
+    "df1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -804,13 +1015,17 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def hogares_decrecen():\n",
+    "    df = importar_e_indexar()\n",
+    "    df1 = df[['nrhogar', 'nrhogar_antes']]\n",
+    "    df1['hogar_decrecio'] = df1.apply(lambda x: 1 if x['nrhogar'] < x['nrhogar_antes'] else 0, axis=1)\n",
+    "    \n",
+    "    return df1 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -826,7 +1041,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Felicidades, realizaste este ejercicio correctamente.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Sara\\AppData\\Local\\Temp/ipykernel_12492/1528477596.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df1['hogar_decrecio'] = df1.apply(lambda x: 1 if x['nrhogar'] < x['nrhogar_antes'] else 0, axis=1)\n"
+     ]
+    }
+   ],
    "source": [
     "## AUTO-CALIFICADOR\n",
     "\n",
@@ -943,7 +1178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -957,7 +1192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
